Exam mode: Fix layout issues in the exam bar (#9072)

--- a/src/main/webapp/content/scss/themes/_default-variables.scss
+++ b/src/main/webapp/content/scss/themes/_default-variables.scss
@@ -89,6 +89,9 @@ $popover-bg: $white;
 $list-group-bg: $white;
 $modal-content-bg: $white;
 
+// Exam
+$exam-height-offset: 38px;
+
 // === END BOOTSTRAP ===
 
 // Navigation Tab Bar
